Fixed accuracy of about page / Made attack and defended  pokemon card spacing better

--- a/app/assets/stylesheets/pokemon.scss
+++ b/app/assets/stylesheets/pokemon.scss
@@ -34,7 +34,7 @@
     @include metadata;
     width: 10%;
     top: 5.3rem;
-    left: .8rem;
+    left: 7px;
     span {
       font-size: 1.8rem;
     }
@@ -45,7 +45,7 @@
   .defended{
     @include metadata;
     width: 10%;
-    left: .8rem;
+    left: 7px;
     top: 7.3rem;
     span {
       font-size: 1.8rem;
